Login and Reg added for the app

--- a/frontend/src/app/components/avatar/avatar.component.scss
+++ b/frontend/src/app/components/avatar/avatar.component.scss
@@ -8,7 +8,7 @@
     .chat-icon {
       width: 60px;
       height: 60px;
-      background-color: #0078ff;
+      background-color: transparent;
       color: #fff;
       border-radius: 50%;
       display: flex;
