--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,32 +1,32 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/home" routerLinkActive="active-link">
+  <a mat-list-item [routerLink]="['/home']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
     <mat-icon>home</mat-icon>
     <span>Home</span>
   </a>
   
-  <a mat-list-item routerLink="/dashboard" routerLinkActive="active-link">
+  <a mat-list-item [routerLink]="['/dashboard']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
     <mat-icon>dashboard</mat-icon>
     <span>Dashboard</span>
   </a>
   
-  <a mat-list-item routerLink="/emissions" routerLinkActive="active-link">
+  <a mat-list-item [routerLink]="['/emissions']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
     <mat-icon>eco</mat-icon>
     <span>Emissions Data</span>
   </a>
   
-  <a mat-list-item routerLink="/analytics" routerLinkActive="active-link">
+  <a mat-list-item [routerLink]="['/analytics']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
     <mat-icon>analytics</mat-icon>
     <span>Analytics</span>
   </a>
 
-  <a mat-list-item routerLink="/data-upload" routerLinkActive="active-link">
+  <a mat-list-item [routerLink]="['/data-upload']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
     <mat-icon>upload_file</mat-icon>
     <span>Data Upload</span>
   </a>
   
   <mat-divider></mat-divider>
   
-  <a mat-list-item routerLink="/settings" routerLinkActive="active-link">
+  <a mat-list-item [routerLink]="['/settings']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
     <mat-icon>settings</mat-icon>
     <span>Settings</span>
   </a>
