--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -23,6 +23,11 @@
     <mat-icon>upload_file</mat-icon>
     <span>Data Upload</span>
   </a>
+
+  <a mat-list-item [routerLink]="['/kb-manager']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+    <mat-icon>storage</mat-icon>
+    <span>Knowledge Base</span>
+  </a>
   
   <mat-divider></mat-divider>
   
